Cleaning and modifying all components and use hooks and  context providers

--- a/src/pages/postAnswer/answer.css
+++ b/src/pages/postAnswer/answer.css
@@ -29,3 +29,8 @@
 .btn-postAnswer:hover {
   background-color: var(--btn-bg-hover) !important;
 }
+.pagination-wrap {
+  display: flex;
+  justify-content: flex-end;
+  margin: 10px 20px 0;
+}
